--- a/index.html
+++ b/index.html
@@ -39,59 +39,127 @@
         </div>
     </header>
     <main>
-       <section class="about secondary-bg">
-             <h3 class="section-title">About Me</h3>
-             <p class="section-description">
-                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
-             </p>
-             <div class="about-items">
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.
+            </p>
+            <div class="about-items">
                 <!-- .about-item*4>p.item-title+p.item-description -->
-                 <div class="about-tiem">
+                <div class="about-tiem">
                     <p class="item-title">Name</p>
                     <p class="item-description">Mary Hardy</p>
-                 </div>
-                 <div class="about-tiem">
+                </div>
+                <div class="about-tiem">
                     <p class="item-title">Email</p>
                     <p class="item-description">info@gmail.com</p>
-                 </div>
-                 <div class="about-tiem">
+                </div>
+                <div class="about-tiem">
                     <p class="item-title">Date of birth</p>
                     <p class="item-description">11 November 1987</p>
-                 </div>
-                 <div class="about-tiem">
+                </div>
+                <div class="about-tiem">
                     <p class="item-title">From</p>
                     <p class="item-description">Los Angeles,USA</p>
-                 </div>
-             </div>
-       </section>
-       <section>
+                </div>
+            </div>
+        </section>
+        <section>
             <h2 class="section-title2">What I do</h2>
             <p class="section-description2">
-                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.
             </p>
             <div class="skill-container">
                 <div class="skills">
                     <img class="skill-logo" src="images/icons/js.png" alt="">
                     <h3 class="skill-title">Vanilla JavaScript</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skills">
                     <img class="skill-logo" src="images/icons/react.png" alt="">
                     <h3 class="skill-title">React</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skills">
                     <img class="skill-logo" src="images/icons/nodejs.png" alt="">
                     <h3 class="skill-title">Node.js</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skills">
-                <img class="skill-logo" src="images/icons/mongo.png" alt="">
-                <h3 class="skill-title">MongoDB</h3>
-                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <img class="skill-logo" src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
-       </section>
+        </section>
+        <!-- Resume section -->
+        <section>
+            <h3 class="section-title3">A summary of My Resume</h3>
+
+            <div class="resume-colum">
+                <h3 class="resume-colum-title">My Education</h3>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+
+
+                <div class="resume-colum">
+                    <h3 class="resume-colum-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute"> Apple Inc / 2020 - Current</h3>
+                        <p class="resume-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-tile">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
