--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </head>
 
 <body class="open-sans-normal">
+    <!-- Header part or Banner part included Nav-bar-->
+      
     <header>
+        <!-- Nav-bar -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -23,7 +26,7 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
-
+         <!-- Banner part -->
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greetings dark-2">Hi, I am</h3>
@@ -39,7 +42,8 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg">
+        <!-- Main section part  -->
+        <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
@@ -67,6 +71,7 @@
                 </div>
             </div>
         </section>
+        <!-- What i do section start -->
         <section>
             <h2 class="section-title2">What I do</h2>
             <p class="section-description2">
@@ -111,7 +116,8 @@
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                     <hr>
@@ -119,7 +125,8 @@
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                     <hr>
@@ -127,42 +134,73 @@
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                 </div>
-    
-                    <div class="resume-colum">
-                        <h3 class="resume-colum-title">My Experience</h3>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Sr. Font End Developer</h2>
-                            <h3 class="resume-item-institute"> Apple Inc / 2020 - Current</h3>
-                            <p class="resume-description">
-                                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-tile">Jr. Font End Developer</h2>
-                            <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
-                            <p class="resume-item-description">
-                                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">HTML Developer</h2>
-                            <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
-                            <p class="resume-item-description">
-                                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                        </div>
+
+                <div class="resume-colum">
+                    <h3 class="resume-colum-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute"> Apple Inc / 2020 - Current</h3>
+                        <p class="resume-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-tile">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
             </div>
-           <button class="btn-primary">Download CV</button>
+            <div class="Download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
     </main>
+<!--Footer part  -->
     <footer>
+        <div class="footer-container">
+            <div class="fooet-column">
+                <h3 class="footer-title">Lets Connect</h3>
+                <p class="footer-description">
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M
+                    ET, Monday through Friday.
+                </p>
+                <div class="social-links">
+                    <img src="images/icons/facebook.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/insta.png" alt="">
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-column-title">Let’s Message me</h3>
+                <form class="contact">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="5">Message</textarea>
+                    <input type="submit" value="Submit" class="btn-primary">
+                </form>
+            </div>
+        </div>
+
 
     </footer>
 </body>
